[package]
name = "hellow_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_address = "0.2.4"
regex = "1.10.2"
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
phonenumber = "0.3"
